add and edit file

--- a/home.html
+++ b/home.html
@@ -1,29 +1,44 @@
 <html>
     <!-- Header Menu of the Page -->
+    
     <head>  
         <title>Home</title>  
-        <link rel= stylesheet href= "style_header.css">
+        <link rel= stylesheet href= "CSS/style_header.css">
+        <link rel= stylesheet href= "CSS/style_home.css">
     </head>
     <body>
-        <header class="top-header" >
-            <div class="bar">
-                <div class="column-logo">
-                    <!-- Top header menu containing logo and Navigation bar -->
-                    <img class="logo" src="pic/logo6.png" alt="logo"/>
-                </div>
-                <div class="column-button">
-                    <a class="button_home" href="#Home">Home</a>
-                    <a href="#Test"><button class="button_test"><span>Test </span></button></a>  
-                </div>
-            </div>
+        <header>
+            <img class="logo" src="pic/logo6.png" alt="logo"/>
+            <ul>
+                <a class="button_home" href="home.html">Home</a>      
+            </ul>
+            <a HREF="userInfo.html"><button class="button_test"><span>Test </span></button></a>  
         </header>
-        <div class="row_contain"></div>
-            <div class="contain">
-                <p></p>
+
+        <main class="row">
+            <div class="row_contain">
+                <div class="col1"> 
+                    <h1>- DHealth - </h1>
+                    <div class="row1-sub">
+                        <div class="col1-sub">
+                            <img class="pic_main_doctor" src="pic/main_doctor.png" />
+                        </div>
+                        <div class="col2-sub">
+                            <p class="text-detail">'DHealth' is the app to diagnose the initial disease. By showing the results of the diseases at risk.</p>
+                            <p class="text-detail">   Users can fill in the symptoms they are experiencing. The  application will analyze the symptoms and show the analysis results, user can see the preliminary introduction of the disease.</p>
+                            <p class="text-detail">   However if users want 100% to confirm they can see a doctor for examination and treatment.</p3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col2">
+                    <img class="pic_main" src="pic/main.png"/>
+                </div>
             </div>
-        </div>
+        </main>
+
         <div class="footer">
-            <p>Subject: PBL  |   Group : present </p>
+            <p class="footer_text">© 2021 DHealth<p>
+            <a href="https://github.com/eimingming/DHealth/tree/master"><img class="logo-git" src="pic/github-logo.png" alt="logo"/></a>
         </div>
     </body>
 
