--- a/test.html
+++ b/test.html
@@ -1,6 +1,52 @@
-<HEAD>
-    <TITLE>ข้อความอธิบายชื่อเรื่องของเว็บ</TITLE>
-    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-    <META NAME="Author" CONTENT="ชื่อผู้พัฒนาเว็บ">
-    <META NAME="KeyWords" CONTENT="ข้อความ 1, ข้อความ 2 ">
-</HEAD>
+<html>
+    <!-- Header Menu of the Page -->
+    
+    <head>  
+        <title>Home</title>  
+        <link rel= stylesheet href= "CSS/style_header.css">
+        <link rel= stylesheet href= "CSS/style_home.css">
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="pic/logo6.png" alt="logo"/>
+            <ul>
+                <a class="button_home" href="home.html">Home</a>      
+            </ul>
+            <a HREF="userInfo.html"><button class="button_test"><span>Test </span></button></a>  
+        </header>
+
+        <main class="row">
+            <div class="row_contain">
+                <div class="col1"> 
+                    <h1>- DHealth - </h1>
+                    <div class="row1-sub">
+                        <div class="col1-sub">
+                            <img class="pic_main_doctor" src="pic/main_doctor.png" />
+                        </div>
+                        <div class="col2-sub">
+                            <p class="text-detail">'DHealth' is the app to diagnose the initial disease. By showing the results of the diseases at risk.</p>
+                            <p class="text-detail">   Users can fill in the symptoms they are experiencing. The  application will analyze the symptoms and show the analysis results, user can see the preliminary introduction of the disease.</p>
+                            <p class="text-detail">   However if users want 100% to confirm they can see a doctor for examination and treatment.</p3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col2">
+                    <img class="pic_main" src="pic/main.png"/>
+                </div>
+            </div>
+        </main>
+
+        <div class="footer">
+            <p class="footer_text">© 2021 DHealth<p>
+            <a href="https://github.com/eimingming/DHealth/tree/master"><img class="logo-git" src="pic/github-logo.png" alt="logo"/></a>
+        </div>
+    </body>
+
+</html>
+
+
+
+  <!--  Logo 
+                <div id="logo">
+                    <img src="images/logo.png" />
+                </div> -->  
