--- a/home.html
+++ b/home.html
@@ -24,9 +24,9 @@
                             <img class="pic_main_doctor" src="pic/main_doctor.png" />
                         </div>
                         <div class="col2-sub">
-                            <p class="text-detail">'DHealth' is the app to diagnose the initial disease. By showing the results of the diseases at risk.</p>
-                            <p class="text-detail">   Users can fill in the symptoms they are experiencing. The  application will analyze the symptoms and show the analysis results, user can see the preliminary introduction of the disease.</p>
-                            <p class="text-detail">   However if users want 100% to confirm they can see a doctor for examination and treatment.</p3>
+                            <p class="text-detail"> 'DHealth' is an introductory Alzheimer's disease diagnostic app. By showing the risk of disease as a percentage.</p>
+                            <p class="text-detail">   User can complete a quiz and the user's current life. The application analyzes user responses and displays the results. Users can see an initial introduction to Alzheimer's disease.</p>
+                            <p class="text-detail">   However, if users want to confirm 100%, they can see a doctor for further examination and treatment.</p3>
                         </div>
                     </div>
                 </div>
