add and edit file

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
     <!-- Header Menu of the Page -->
     
     <head>  
-        <title>Home</title>  
+        <title>Test for Alzheimer's disease</title>  
         <link rel= stylesheet href= "CSS/style_header.css">
         <link rel= stylesheet href= "CSS/style_home.css">
     </head>
