--- a/userInfo.html
+++ b/userInfo.html
@@ -2,7 +2,7 @@
     <!-- Header Menu of the Page -->
     
     <head>  
-        <title>Home</title>  
+        <title>User information</title>  
         <link rel= stylesheet href= "CSS/style_header.css">
         <link rel= stylesheet href= "CSS/style_userInfo.css">
     </head>
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col2">
                     <div class="contain">
-                        <form class="form_card" style="width: 100%; margin-top: 5%;" action="userInfo.php" method="post">
+                        <form class="form_card" style="width: 100%; margin-top: 5%;" action="userInfo.php" method="POST">
                             <div class="title">
                                 <h1>User Information</h1>
                             </div>
