--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
     <!-- Header Menu of the Page -->
     
     <head>  
-        <title>Home</title>  
+        <title>DHealth Home</title>  
         <link rel= stylesheet href= "CSS/style_header.css">
         <link rel= stylesheet href= "CSS/style_home.css">
     </head>
