--- a/results.html
+++ b/results.html
@@ -36,7 +36,7 @@
                     <div class="contain" style="margin-right: 10%;">
                         <img class="pic_result" src="pic/pic_result.png"/>
                         <h2>Instruction</h2>
-                        <a href="https://github.com/eimingming/DHealth/tree/master">Alzheimer Information<i class="material-icons">touch_app</i></a>
+                        <a href="https://www.alz.org/">Alzheimer Information<i class="material-icons">touch_app</i></a>
                     </div>
                 </div>
             </div>
