--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <head>  
         <title>Test for Alzheimer's disease</title>  
         <link rel= stylesheet href= "CSS/style_header.css">
-        <link rel= stylesheet href= "CSS/style_home.css">
+        <link rel= stylesheet href= "CSS/style_test.css">
     </head>
     <body>
         <header>
@@ -16,24 +16,7 @@
         </header>
 
         <main class="row">
-            <div class="row_contain">
-                <div class="col1"> 
-                    <h1>- DHealth - </h1>
-                    <div class="row1-sub">
-                        <div class="col1-sub">
-                            <img class="pic_main_doctor" src="pic/main_doctor.png" />
-                        </div>
-                        <div class="col2-sub">
-                            <p class="text-detail">'DHealth' is the app to diagnose the initial disease. By showing the results of the diseases at risk.</p>
-                            <p class="text-detail">   Users can fill in the symptoms they are experiencing. The  application will analyze the symptoms and show the analysis results, user can see the preliminary introduction of the disease.</p>
-                            <p class="text-detail">   However if users want 100% to confirm they can see a doctor for examination and treatment.</p3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col2">
-                    <img class="pic_main" src="pic/main.png"/>
-                </div>
-            </div>
+        
         </main>
 
         <div class="footer">
