--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             <ul>
                 <a class="button_home" href="home.html">Home</a>      
             </ul>
-            <a HREF="userInfo.html"><button class="button_test"><span>Test </span></button></a>  
+            <a HREF="userInfo.php"><button class="button_test"><span>Test </span></button></a>  
         </header>
 
         <main class="row">
