--- a/results.html
+++ b/results.html
@@ -20,13 +20,12 @@
                 <div class="col1">
                     <div class="contain" style="margin-left: 10%;">
                         <h1>Brain test results</h1>
-                        <p1>Name :  Hello World</p1><br>
-                        <p1>Age : 60</p1><br><br>
-                        <p1>Age : 60</p1><br><br>
+                        <p1>Name :</p1><br>
+                        <p1>Age :</p1><br><br><br>
                         <p1>You have the chance to be :</p1><br><br>
                         <div class="row_score">
                             <div class="score">
-                                <p3>73</p3><p4> %</p4>
+                                <p3>73</p3><p4>%</p4>
                             </div>
                         </div>
                         <p2>*To be sure, you should consult the doctor further.​</p2>
@@ -36,7 +35,8 @@
                     <div class="contain" style="margin-right: 10%;">
                         <img class="pic_result" src="pic/pic_result.png"/>
                         <h2>Instruction</h2>
-                        <a href="https://www.alz.org/">Alzheimer Information<i class="material-icons">touch_app</i></a>
+                        <a href="https://www.alz.org/alzheimers-dementia/what-is-alzheimers">What is Alzheimer’s Disease?<i class="material-icons">touch_app</i></a></br>
+                        <a href="https://www.alz.org/alzheimers-dementia/stages">Stages of Alzheimer's<i class="material-icons">touch_app</i></a>
                     </div>
                 </div>
             </div>
